// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Availability/AvailabilityGrid Vanilla 1`] = `
<div
  class="AvailabilityGrid"
>
  <div
    class="Column"
  >
    <div
      class="Top Left Cell-unselectable"
    >
      
  

    </div>
     
    <div
      class="Left Cell-unselectable"
    >
      
  12 am

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  1 am

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  2 am

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  3 am

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  4 am

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  5 am

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  6 am

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  7 am

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  8 am

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  9 am

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  10 am

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  11 am

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  12 pm

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  1 pm

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  2 pm

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  3 pm

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  4 pm

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  5 pm

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  6 pm

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  7 pm

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  8 pm

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  9 pm

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  10 pm

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  11 pm

    </div>
  </div>
   
  <div
    class="Column"
  >
    <div
      class="Top Cell-unselectable"
    >
      
  Sunday

    </div>
     
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <svg
        class="Cell-icon clock-icon"
        fill="none"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M6.28555 15.0753C6.88184 15.2786 7.15969 15.8311 6.90615 16.3093L5.25321 19.427C4.99968 19.9053 4.31075 20.1281 3.71445 19.9247C3.11816 19.7214 2.84031 19.1689 3.09385 18.6906L4.74679 15.5729C5.00032 15.0947 5.68925 14.8719 6.28555 15.0753Z"
          fill="#FF0202"
          fill-rule="evenodd"
        />
         
        <path
          clip-rule="evenodd"
          d="M13.7145 15.0753C13.1181 15.2786 12.8403 15.8311 13.0938 16.3093L14.7468 19.427C15.0004 19.9053 15.6893 20.1281 16.2855 19.9247C16.8819 19.7214 17.1597 19.1689 16.9062 18.6906L15.2532 15.5729C14.9996 15.0947 14.3107 14.8719 13.7145 15.0753Z"
          fill="#FF0202"
          fill-rule="evenodd"
        />
         
        <path
          clip-rule="evenodd"
          d="M10.0378 6C10.611 6 11.0757 6.38684 11.0757 6.86403V9.27196H12.9622C13.5354 9.27196 14 9.65876 14 10.136C14 10.6132 13.5354 11 12.9622 11H10.0378C9.46465 11 9 10.6132 9 10.136V6.86403C9 6.38684 9.46465 6 10.0378 6Z"
          fill="#FF0202"
          fill-rule="evenodd"
        />
         
        <path
          clip-rule="evenodd"
          d="M9.99999 16.0117C13.2965 16.0117 15.9959 13.335 15.9959 10C15.9959 6.66498 13.2965 3.98831 9.99999 3.98831C6.70346 3.98831 4.00409 6.66498 4.00409 10C4.00409 13.335 6.70346 16.0117 9.99999 16.0117ZM9.99999 18C14.4183 18 18 14.4183 18 10C18 5.58173 14.4183 2 9.99999 2C5.58171 2 2 5.58173 2 10C2 14.4183 5.58171 18 9.99999 18Z"
          fill="#FF0202"
          fill-rule="evenodd"
        />
         
        <path
          d="M2.54801 8C2.09035 7.65902 1.71321 7.21294 1.44546 6.69588C1.1777 6.17884 1.02641 5.60452 1.00316 5.01683C0.979903 4.42915 1.08531 3.84369 1.3113 3.30522C1.53729 2.76675 1.87789 2.28952 2.30705 1.91007C2.73621 1.5306 3.24255 1.25894 3.78736 1.11586C4.33218 0.972783 4.90101 0.962073 5.45038 1.08456C5.99976 1.20704 6.5151 1.45946 6.957 1.82253C7.3989 2.1856 7.75567 2.64969 8 3.1793L6.11574 4.13254C6.01021 3.9038 5.85614 3.70338 5.66529 3.54658C5.47444 3.38978 5.25188 3.28076 5.01462 3.22786C4.77736 3.17497 4.5317 3.1796 4.29641 3.24139C4.06112 3.30318 3.84244 3.4205 3.6571 3.58439C3.47176 3.74827 3.32466 3.95436 3.22707 4.18692C3.12947 4.41947 3.08394 4.67231 3.09399 4.92611C3.10403 5.17992 3.16937 5.42795 3.285 5.65125C3.40064 5.87455 3.56351 6.0672 3.76117 6.21447L2.54801 8Z"
          fill="#FF0202"
        />
         
        <path
          d="M17.452 8C17.9097 7.65902 18.2868 7.21294 18.5545 6.69588C18.8223 6.17884 18.9736 5.60452 18.9968 5.01683C19.0201 4.42915 18.9147 3.84369 18.6888 3.30522C18.4627 2.76675 18.1221 2.28952 17.693 1.91007C17.2639 1.5306 16.7574 1.25894 16.2127 1.11586C15.6679 0.972783 15.0991 0.962073 14.5497 1.08456C14.0003 1.20704 13.485 1.45946 13.0431 1.82253C12.6012 2.1856 12.2444 2.64969 12 3.1793L13.8843 4.13254C13.9898 3.9038 14.1439 3.70338 14.3348 3.54658C14.5256 3.38978 14.7482 3.28076 14.9854 3.22786C15.2227 3.17497 15.4683 3.1796 15.7036 3.24139C15.9389 3.30318 16.1576 3.4205 16.3429 3.58439C16.5282 3.74827 16.6754 3.95436 16.773 4.18692C16.8706 4.41947 16.9161 4.67231 16.906 4.92611C16.896 5.17992 16.8307 5.42795 16.715 5.65125C16.5994 5.87455 16.4366 6.0672 16.2389 6.21447L17.452 8Z"
          fill="#FF0202"
        />
      </svg>
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
  </div>
  <div
    class="Column"
  >
    <div
      class="Top Cell-unselectable"
    >
      
  Monday

    </div>
     
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <svg
        class="Cell-icon clock-icon"
        fill="none"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M6.28555 15.0753C6.88184 15.2786 7.15969 15.8311 6.90615 16.3093L5.25321 19.427C4.99968 19.9053 4.31075 20.1281 3.71445 19.9247C3.11816 19.7214 2.84031 19.1689 3.09385 18.6906L4.74679 15.5729C5.00032 15.0947 5.68925 14.8719 6.28555 15.0753Z"
          fill="#FF0202"
          fill-rule="evenodd"
        />
         
        <path
          clip-rule="evenodd"
          d="M13.7145 15.0753C13.1181 15.2786 12.8403 15.8311 13.0938 16.3093L14.7468 19.427C15.0004 19.9053 15.6893 20.1281 16.2855 19.9247C16.8819 19.7214 17.1597 19.1689 16.9062 18.6906L15.2532 15.5729C14.9996 15.0947 14.3107 14.8719 13.7145 15.0753Z"
          fill="#FF0202"
          fill-rule="evenodd"
        />
         
        <path
          clip-rule="evenodd"
          d="M10.0378 6C10.611 6 11.0757 6.38684 11.0757 6.86403V9.27196H12.9622C13.5354 9.27196 14 9.65876 14 10.136C14 10.6132 13.5354 11 12.9622 11H10.0378C9.46465 11 9 10.6132 9 10.136V6.86403C9 6.38684 9.46465 6 10.0378 6Z"
          fill="#FF0202"
          fill-rule="evenodd"
        />
         
        <path
          clip-rule="evenodd"
          d="M9.99999 16.0117C13.2965 16.0117 15.9959 13.335 15.9959 10C15.9959 6.66498 13.2965 3.98831 9.99999 3.98831C6.70346 3.98831 4.00409 6.66498 4.00409 10C4.00409 13.335 6.70346 16.0117 9.99999 16.0117ZM9.99999 18C14.4183 18 18 14.4183 18 10C18 5.58173 14.4183 2 9.99999 2C5.58171 2 2 5.58173 2 10C2 14.4183 5.58171 18 9.99999 18Z"
          fill="#FF0202"
          fill-rule="evenodd"
        />
         
        <path
          d="M2.54801 8C2.09035 7.65902 1.71321 7.21294 1.44546 6.69588C1.1777 6.17884 1.02641 5.60452 1.00316 5.01683C0.979903 4.42915 1.08531 3.84369 1.3113 3.30522C1.53729 2.76675 1.87789 2.28952 2.30705 1.91007C2.73621 1.5306 3.24255 1.25894 3.78736 1.11586C4.33218 0.972783 4.90101 0.962073 5.45038 1.08456C5.99976 1.20704 6.5151 1.45946 6.957 1.82253C7.3989 2.1856 7.75567 2.64969 8 3.1793L6.11574 4.13254C6.01021 3.9038 5.85614 3.70338 5.66529 3.54658C5.47444 3.38978 5.25188 3.28076 5.01462 3.22786C4.77736 3.17497 4.5317 3.1796 4.29641 3.24139C4.06112 3.30318 3.84244 3.4205 3.6571 3.58439C3.47176 3.74827 3.32466 3.95436 3.22707 4.18692C3.12947 4.41947 3.08394 4.67231 3.09399 4.92611C3.10403 5.17992 3.16937 5.42795 3.285 5.65125C3.40064 5.87455 3.56351 6.0672 3.76117 6.21447L2.54801 8Z"
          fill="#FF0202"
        />
         
        <path
          d="M17.452 8C17.9097 7.65902 18.2868 7.21294 18.5545 6.69588C18.8223 6.17884 18.9736 5.60452 18.9968 5.01683C19.0201 4.42915 18.9147 3.84369 18.6888 3.30522C18.4627 2.76675 18.1221 2.28952 17.693 1.91007C17.2639 1.5306 16.7574 1.25894 16.2127 1.11586C15.6679 0.972783 15.0991 0.962073 14.5497 1.08456C14.0003 1.20704 13.485 1.45946 13.0431 1.82253C12.6012 2.1856 12.2444 2.64969 12 3.1793L13.8843 4.13254C13.9898 3.9038 14.1439 3.70338 14.3348 3.54658C14.5256 3.38978 14.7482 3.28076 14.9854 3.22786C15.2227 3.17497 15.4683 3.1796 15.7036 3.24139C15.9389 3.30318 16.1576 3.4205 16.3429 3.58439C16.5282 3.74827 16.6754 3.95436 16.773 4.18692C16.8706 4.41947 16.9161 4.67231 16.906 4.92611C16.896 5.17992 16.8307 5.42795 16.715 5.65125C16.5994 5.87455 16.4366 6.0672 16.2389 6.21447L17.452 8Z"
          fill="#FF0202"
        />
      </svg>
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
  </div>
  <div
    class="Column"
  >
    <div
      class="Top Cell-unselectable"
    >
      
  Tuesday

    </div>
     
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <svg
        class="Cell-icon clock-icon"
        fill="none"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M6.28555 15.0753C6.88184 15.2786 7.15969 15.8311 6.90615 16.3093L5.25321 19.427C4.99968 19.9053 4.31075 20.1281 3.71445 19.9247C3.11816 19.7214 2.84031 19.1689 3.09385 18.6906L4.74679 15.5729C5.00032 15.0947 5.68925 14.8719 6.28555 15.0753Z"
          fill="#FF0202"
          fill-rule="evenodd"
        />
         
        <path
          clip-rule="evenodd"
          d="M13.7145 15.0753C13.1181 15.2786 12.8403 15.8311 13.0938 16.3093L14.7468 19.427C15.0004 19.9053 15.6893 20.1281 16.2855 19.9247C16.8819 19.7214 17.1597 19.1689 16.9062 18.6906L15.2532 15.5729C14.9996 15.0947 14.3107 14.8719 13.7145 15.0753Z"
          fill="#FF0202"
          fill-rule="evenodd"
        />
         
        <path
          clip-rule="evenodd"
          d="M10.0378 6C10.611 6 11.0757 6.38684 11.0757 6.86403V9.27196H12.9622C13.5354 9.27196 14 9.65876 14 10.136C14 10.6132 13.5354 11 12.9622 11H10.0378C9.46465 11 9 10.6132 9 10.136V6.86403C9 6.38684 9.46465 6 10.0378 6Z"
          fill="#FF0202"
          fill-rule="evenodd"
        />
         
        <path
          clip-rule="evenodd"
          d="M9.99999 16.0117C13.2965 16.0117 15.9959 13.335 15.9959 10C15.9959 6.66498 13.2965 3.98831 9.99999 3.98831C6.70346 3.98831 4.00409 6.66498 4.00409 10C4.00409 13.335 6.70346 16.0117 9.99999 16.0117ZM9.99999 18C14.4183 18 18 14.4183 18 10C18 5.58173 14.4183 2 9.99999 2C5.58171 2 2 5.58173 2 10C2 14.4183 5.58171 18 9.99999 18Z"
          fill="#FF0202"
          fill-rule="evenodd"
        />
         
        <path
          d="M2.54801 8C2.09035 7.65902 1.71321 7.21294 1.44546 6.69588C1.1777 6.17884 1.02641 5.60452 1.00316 5.01683C0.979903 4.42915 1.08531 3.84369 1.3113 3.30522C1.53729 2.76675 1.87789 2.28952 2.30705 1.91007C2.73621 1.5306 3.24255 1.25894 3.78736 1.11586C4.33218 0.972783 4.90101 0.962073 5.45038 1.08456C5.99976 1.20704 6.5151 1.45946 6.957 1.82253C7.3989 2.1856 7.75567 2.64969 8 3.1793L6.11574 4.13254C6.01021 3.9038 5.85614 3.70338 5.66529 3.54658C5.47444 3.38978 5.25188 3.28076 5.01462 3.22786C4.77736 3.17497 4.5317 3.1796 4.29641 3.24139C4.06112 3.30318 3.84244 3.4205 3.6571 3.58439C3.47176 3.74827 3.32466 3.95436 3.22707 4.18692C3.12947 4.41947 3.08394 4.67231 3.09399 4.92611C3.10403 5.17992 3.16937 5.42795 3.285 5.65125C3.40064 5.87455 3.56351 6.0672 3.76117 6.21447L2.54801 8Z"
          fill="#FF0202"
        />
         
        <path
          d="M17.452 8C17.9097 7.65902 18.2868 7.21294 18.5545 6.69588C18.8223 6.17884 18.9736 5.60452 18.9968 5.01683C19.0201 4.42915 18.9147 3.84369 18.6888 3.30522C18.4627 2.76675 18.1221 2.28952 17.693 1.91007C17.2639 1.5306 16.7574 1.25894 16.2127 1.11586C15.6679 0.972783 15.0991 0.962073 14.5497 1.08456C14.0003 1.20704 13.485 1.45946 13.0431 1.82253C12.6012 2.1856 12.2444 2.64969 12 3.1793L13.8843 4.13254C13.9898 3.9038 14.1439 3.70338 14.3348 3.54658C14.5256 3.38978 14.7482 3.28076 14.9854 3.22786C15.2227 3.17497 15.4683 3.1796 15.7036 3.24139C15.9389 3.30318 16.1576 3.4205 16.3429 3.58439C16.5282 3.74827 16.6754 3.95436 16.773 4.18692C16.8706 4.41947 16.9161 4.67231 16.906 4.92611C16.896 5.17992 16.8307 5.42795 16.715 5.65125C16.5994 5.87455 16.4366 6.0672 16.2389 6.21447L17.452 8Z"
          fill="#FF0202"
        />
      </svg>
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
  </div>
  <div
    class="Column"
  >
    <div
      class="Top Cell-unselectable"
    >
      
  Wednesday

    </div>
     
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <svg
        class="Cell-icon clock-icon"
        fill="none"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M6.28555 15.0753C6.88184 15.2786 7.15969 15.8311 6.90615 16.3093L5.25321 19.427C4.99968 19.9053 4.31075 20.1281 3.71445 19.9247C3.11816 19.7214 2.84031 19.1689 3.09385 18.6906L4.74679 15.5729C5.00032 15.0947 5.68925 14.8719 6.28555 15.0753Z"
          fill="#FF0202"
          fill-rule="evenodd"
        />
         
        <path
          clip-rule="evenodd"
          d="M13.7145 15.0753C13.1181 15.2786 12.8403 15.8311 13.0938 16.3093L14.7468 19.427C15.0004 19.9053 15.6893 20.1281 16.2855 19.9247C16.8819 19.7214 17.1597 19.1689 16.9062 18.6906L15.2532 15.5729C14.9996 15.0947 14.3107 14.8719 13.7145 15.0753Z"
          fill="#FF0202"
          fill-rule="evenodd"
        />
         
        <path
          clip-rule="evenodd"
          d="M10.0378 6C10.611 6 11.0757 6.38684 11.0757 6.86403V9.27196H12.9622C13.5354 9.27196 14 9.65876 14 10.136C14 10.6132 13.5354 11 12.9622 11H10.0378C9.46465 11 9 10.6132 9 10.136V6.86403C9 6.38684 9.46465 6 10.0378 6Z"
          fill="#FF0202"
          fill-rule="evenodd"
        />
         
        <path
          clip-rule="evenodd"
          d="M9.99999 16.0117C13.2965 16.0117 15.9959 13.335 15.9959 10C15.9959 6.66498 13.2965 3.98831 9.99999 3.98831C6.70346 3.98831 4.00409 6.66498 4.00409 10C4.00409 13.335 6.70346 16.0117 9.99999 16.0117ZM9.99999 18C14.4183 18 18 14.4183 18 10C18 5.58173 14.4183 2 9.99999 2C5.58171 2 2 5.58173 2 10C2 14.4183 5.58171 18 9.99999 18Z"
          fill="#FF0202"
          fill-rule="evenodd"
        />
         
        <path
          d="M2.54801 8C2.09035 7.65902 1.71321 7.21294 1.44546 6.69588C1.1777 6.17884 1.02641 5.60452 1.00316 5.01683C0.979903 4.42915 1.08531 3.84369 1.3113 3.30522C1.53729 2.76675 1.87789 2.28952 2.30705 1.91007C2.73621 1.5306 3.24255 1.25894 3.78736 1.11586C4.33218 0.972783 4.90101 0.962073 5.45038 1.08456C5.99976 1.20704 6.5151 1.45946 6.957 1.82253C7.3989 2.1856 7.75567 2.64969 8 3.1793L6.11574 4.13254C6.01021 3.9038 5.85614 3.70338 5.66529 3.54658C5.47444 3.38978 5.25188 3.28076 5.01462 3.22786C4.77736 3.17497 4.5317 3.1796 4.29641 3.24139C4.06112 3.30318 3.84244 3.4205 3.6571 3.58439C3.47176 3.74827 3.32466 3.95436 3.22707 4.18692C3.12947 4.41947 3.08394 4.67231 3.09399 4.92611C3.10403 5.17992 3.16937 5.42795 3.285 5.65125C3.40064 5.87455 3.56351 6.0672 3.76117 6.21447L2.54801 8Z"
          fill="#FF0202"
        />
         
        <path
          d="M17.452 8C17.9097 7.65902 18.2868 7.21294 18.5545 6.69588C18.8223 6.17884 18.9736 5.60452 18.9968 5.01683C19.0201 4.42915 18.9147 3.84369 18.6888 3.30522C18.4627 2.76675 18.1221 2.28952 17.693 1.91007C17.2639 1.5306 16.7574 1.25894 16.2127 1.11586C15.6679 0.972783 15.0991 0.962073 14.5497 1.08456C14.0003 1.20704 13.485 1.45946 13.0431 1.82253C12.6012 2.1856 12.2444 2.64969 12 3.1793L13.8843 4.13254C13.9898 3.9038 14.1439 3.70338 14.3348 3.54658C14.5256 3.38978 14.7482 3.28076 14.9854 3.22786C15.2227 3.17497 15.4683 3.1796 15.7036 3.24139C15.9389 3.30318 16.1576 3.4205 16.3429 3.58439C16.5282 3.74827 16.6754 3.95436 16.773 4.18692C16.8706 4.41947 16.9161 4.67231 16.906 4.92611C16.896 5.17992 16.8307 5.42795 16.715 5.65125C16.5994 5.87455 16.4366 6.0672 16.2389 6.21447L17.452 8Z"
          fill="#FF0202"
        />
      </svg>
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
  </div>
  <div
    class="Column"
  >
    <div
      class="Top Cell-unselectable"
    >
      
  Thursday

    </div>
     
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <svg
        class="Cell-icon clock-icon"
        fill="none"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M6.28555 15.0753C6.88184 15.2786 7.15969 15.8311 6.90615 16.3093L5.25321 19.427C4.99968 19.9053 4.31075 20.1281 3.71445 19.9247C3.11816 19.7214 2.84031 19.1689 3.09385 18.6906L4.74679 15.5729C5.00032 15.0947 5.68925 14.8719 6.28555 15.0753Z"
          fill="#FF0202"
          fill-rule="evenodd"
        />
         
        <path
          clip-rule="evenodd"
          d="M13.7145 15.0753C13.1181 15.2786 12.8403 15.8311 13.0938 16.3093L14.7468 19.427C15.0004 19.9053 15.6893 20.1281 16.2855 19.9247C16.8819 19.7214 17.1597 19.1689 16.9062 18.6906L15.2532 15.5729C14.9996 15.0947 14.3107 14.8719 13.7145 15.0753Z"
          fill="#FF0202"
          fill-rule="evenodd"
        />
         
        <path
          clip-rule="evenodd"
          d="M10.0378 6C10.611 6 11.0757 6.38684 11.0757 6.86403V9.27196H12.9622C13.5354 9.27196 14 9.65876 14 10.136C14 10.6132 13.5354 11 12.9622 11H10.0378C9.46465 11 9 10.6132 9 10.136V6.86403C9 6.38684 9.46465 6 10.0378 6Z"
          fill="#FF0202"
          fill-rule="evenodd"
        />
         
        <path
          clip-rule="evenodd"
          d="M9.99999 16.0117C13.2965 16.0117 15.9959 13.335 15.9959 10C15.9959 6.66498 13.2965 3.98831 9.99999 3.98831C6.70346 3.98831 4.00409 6.66498 4.00409 10C4.00409 13.335 6.70346 16.0117 9.99999 16.0117ZM9.99999 18C14.4183 18 18 14.4183 18 10C18 5.58173 14.4183 2 9.99999 2C5.58171 2 2 5.58173 2 10C2 14.4183 5.58171 18 9.99999 18Z"
          fill="#FF0202"
          fill-rule="evenodd"
        />
         
        <path
          d="M2.54801 8C2.09035 7.65902 1.71321 7.21294 1.44546 6.69588C1.1777 6.17884 1.02641 5.60452 1.00316 5.01683C0.979903 4.42915 1.08531 3.84369 1.3113 3.30522C1.53729 2.76675 1.87789 2.28952 2.30705 1.91007C2.73621 1.5306 3.24255 1.25894 3.78736 1.11586C4.33218 0.972783 4.90101 0.962073 5.45038 1.08456C5.99976 1.20704 6.5151 1.45946 6.957 1.82253C7.3989 2.1856 7.75567 2.64969 8 3.1793L6.11574 4.13254C6.01021 3.9038 5.85614 3.70338 5.66529 3.54658C5.47444 3.38978 5.25188 3.28076 5.01462 3.22786C4.77736 3.17497 4.5317 3.1796 4.29641 3.24139C4.06112 3.30318 3.84244 3.4205 3.6571 3.58439C3.47176 3.74827 3.32466 3.95436 3.22707 4.18692C3.12947 4.41947 3.08394 4.67231 3.09399 4.92611C3.10403 5.17992 3.16937 5.42795 3.285 5.65125C3.40064 5.87455 3.56351 6.0672 3.76117 6.21447L2.54801 8Z"
          fill="#FF0202"
        />
         
        <path
          d="M17.452 8C17.9097 7.65902 18.2868 7.21294 18.5545 6.69588C18.8223 6.17884 18.9736 5.60452 18.9968 5.01683C19.0201 4.42915 18.9147 3.84369 18.6888 3.30522C18.4627 2.76675 18.1221 2.28952 17.693 1.91007C17.2639 1.5306 16.7574 1.25894 16.2127 1.11586C15.6679 0.972783 15.0991 0.962073 14.5497 1.08456C14.0003 1.20704 13.485 1.45946 13.0431 1.82253C12.6012 2.1856 12.2444 2.64969 12 3.1793L13.8843 4.13254C13.9898 3.9038 14.1439 3.70338 14.3348 3.54658C14.5256 3.38978 14.7482 3.28076 14.9854 3.22786C15.2227 3.17497 15.4683 3.1796 15.7036 3.24139C15.9389 3.30318 16.1576 3.4205 16.3429 3.58439C16.5282 3.74827 16.6754 3.95436 16.773 4.18692C16.8706 4.41947 16.9161 4.67231 16.906 4.92611C16.896 5.17992 16.8307 5.42795 16.715 5.65125C16.5994 5.87455 16.4366 6.0672 16.2389 6.21447L17.452 8Z"
          fill="#FF0202"
        />
      </svg>
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
  </div>
  <div
    class="Column"
  >
    <div
      class="Top Cell-unselectable"
    >
      
  Friday

    </div>
     
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <svg
        class="Cell-icon clock-icon"
        fill="none"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M6.28555 15.0753C6.88184 15.2786 7.15969 15.8311 6.90615 16.3093L5.25321 19.427C4.99968 19.9053 4.31075 20.1281 3.71445 19.9247C3.11816 19.7214 2.84031 19.1689 3.09385 18.6906L4.74679 15.5729C5.00032 15.0947 5.68925 14.8719 6.28555 15.0753Z"
          fill="#FF0202"
          fill-rule="evenodd"
        />
         
        <path
          clip-rule="evenodd"
          d="M13.7145 15.0753C13.1181 15.2786 12.8403 15.8311 13.0938 16.3093L14.7468 19.427C15.0004 19.9053 15.6893 20.1281 16.2855 19.9247C16.8819 19.7214 17.1597 19.1689 16.9062 18.6906L15.2532 15.5729C14.9996 15.0947 14.3107 14.8719 13.7145 15.0753Z"
          fill="#FF0202"
          fill-rule="evenodd"
        />
         
        <path
          clip-rule="evenodd"
          d="M10.0378 6C10.611 6 11.0757 6.38684 11.0757 6.86403V9.27196H12.9622C13.5354 9.27196 14 9.65876 14 10.136C14 10.6132 13.5354 11 12.9622 11H10.0378C9.46465 11 9 10.6132 9 10.136V6.86403C9 6.38684 9.46465 6 10.0378 6Z"
          fill="#FF0202"
          fill-rule="evenodd"
        />
         
        <path
          clip-rule="evenodd"
          d="M9.99999 16.0117C13.2965 16.0117 15.9959 13.335 15.9959 10C15.9959 6.66498 13.2965 3.98831 9.99999 3.98831C6.70346 3.98831 4.00409 6.66498 4.00409 10C4.00409 13.335 6.70346 16.0117 9.99999 16.0117ZM9.99999 18C14.4183 18 18 14.4183 18 10C18 5.58173 14.4183 2 9.99999 2C5.58171 2 2 5.58173 2 10C2 14.4183 5.58171 18 9.99999 18Z"
          fill="#FF0202"
          fill-rule="evenodd"
        />
         
        <path
          d="M2.54801 8C2.09035 7.65902 1.71321 7.21294 1.44546 6.69588C1.1777 6.17884 1.02641 5.60452 1.00316 5.01683C0.979903 4.42915 1.08531 3.84369 1.3113 3.30522C1.53729 2.76675 1.87789 2.28952 2.30705 1.91007C2.73621 1.5306 3.24255 1.25894 3.78736 1.11586C4.33218 0.972783 4.90101 0.962073 5.45038 1.08456C5.99976 1.20704 6.5151 1.45946 6.957 1.82253C7.3989 2.1856 7.75567 2.64969 8 3.1793L6.11574 4.13254C6.01021 3.9038 5.85614 3.70338 5.66529 3.54658C5.47444 3.38978 5.25188 3.28076 5.01462 3.22786C4.77736 3.17497 4.5317 3.1796 4.29641 3.24139C4.06112 3.30318 3.84244 3.4205 3.6571 3.58439C3.47176 3.74827 3.32466 3.95436 3.22707 4.18692C3.12947 4.41947 3.08394 4.67231 3.09399 4.92611C3.10403 5.17992 3.16937 5.42795 3.285 5.65125C3.40064 5.87455 3.56351 6.0672 3.76117 6.21447L2.54801 8Z"
          fill="#FF0202"
        />
         
        <path
          d="M17.452 8C17.9097 7.65902 18.2868 7.21294 18.5545 6.69588C18.8223 6.17884 18.9736 5.60452 18.9968 5.01683C19.0201 4.42915 18.9147 3.84369 18.6888 3.30522C18.4627 2.76675 18.1221 2.28952 17.693 1.91007C17.2639 1.5306 16.7574 1.25894 16.2127 1.11586C15.6679 0.972783 15.0991 0.962073 14.5497 1.08456C14.0003 1.20704 13.485 1.45946 13.0431 1.82253C12.6012 2.1856 12.2444 2.64969 12 3.1793L13.8843 4.13254C13.9898 3.9038 14.1439 3.70338 14.3348 3.54658C14.5256 3.38978 14.7482 3.28076 14.9854 3.22786C15.2227 3.17497 15.4683 3.1796 15.7036 3.24139C15.9389 3.30318 16.1576 3.4205 16.3429 3.58439C16.5282 3.74827 16.6754 3.95436 16.773 4.18692C16.8706 4.41947 16.9161 4.67231 16.906 4.92611C16.896 5.17992 16.8307 5.42795 16.715 5.65125C16.5994 5.87455 16.4366 6.0672 16.2389 6.21447L17.452 8Z"
          fill="#FF0202"
        />
      </svg>
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
  </div>
  <div
    class="Column"
  >
    <div
      class="Top Cell-unselectable"
    >
      
  Saturday

    </div>
     
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <svg
        class="Cell-icon clock-icon"
        fill="none"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M6.28555 15.0753C6.88184 15.2786 7.15969 15.8311 6.90615 16.3093L5.25321 19.427C4.99968 19.9053 4.31075 20.1281 3.71445 19.9247C3.11816 19.7214 2.84031 19.1689 3.09385 18.6906L4.74679 15.5729C5.00032 15.0947 5.68925 14.8719 6.28555 15.0753Z"
          fill="#FF0202"
          fill-rule="evenodd"
        />
         
        <path
          clip-rule="evenodd"
          d="M13.7145 15.0753C13.1181 15.2786 12.8403 15.8311 13.0938 16.3093L14.7468 19.427C15.0004 19.9053 15.6893 20.1281 16.2855 19.9247C16.8819 19.7214 17.1597 19.1689 16.9062 18.6906L15.2532 15.5729C14.9996 15.0947 14.3107 14.8719 13.7145 15.0753Z"
          fill="#FF0202"
          fill-rule="evenodd"
        />
         
        <path
          clip-rule="evenodd"
          d="M10.0378 6C10.611 6 11.0757 6.38684 11.0757 6.86403V9.27196H12.9622C13.5354 9.27196 14 9.65876 14 10.136C14 10.6132 13.5354 11 12.9622 11H10.0378C9.46465 11 9 10.6132 9 10.136V6.86403C9 6.38684 9.46465 6 10.0378 6Z"
          fill="#FF0202"
          fill-rule="evenodd"
        />
         
        <path
          clip-rule="evenodd"
          d="M9.99999 16.0117C13.2965 16.0117 15.9959 13.335 15.9959 10C15.9959 6.66498 13.2965 3.98831 9.99999 3.98831C6.70346 3.98831 4.00409 6.66498 4.00409 10C4.00409 13.335 6.70346 16.0117 9.99999 16.0117ZM9.99999 18C14.4183 18 18 14.4183 18 10C18 5.58173 14.4183 2 9.99999 2C5.58171 2 2 5.58173 2 10C2 14.4183 5.58171 18 9.99999 18Z"
          fill="#FF0202"
          fill-rule="evenodd"
        />
         
        <path
          d="M2.54801 8C2.09035 7.65902 1.71321 7.21294 1.44546 6.69588C1.1777 6.17884 1.02641 5.60452 1.00316 5.01683C0.979903 4.42915 1.08531 3.84369 1.3113 3.30522C1.53729 2.76675 1.87789 2.28952 2.30705 1.91007C2.73621 1.5306 3.24255 1.25894 3.78736 1.11586C4.33218 0.972783 4.90101 0.962073 5.45038 1.08456C5.99976 1.20704 6.5151 1.45946 6.957 1.82253C7.3989 2.1856 7.75567 2.64969 8 3.1793L6.11574 4.13254C6.01021 3.9038 5.85614 3.70338 5.66529 3.54658C5.47444 3.38978 5.25188 3.28076 5.01462 3.22786C4.77736 3.17497 4.5317 3.1796 4.29641 3.24139C4.06112 3.30318 3.84244 3.4205 3.6571 3.58439C3.47176 3.74827 3.32466 3.95436 3.22707 4.18692C3.12947 4.41947 3.08394 4.67231 3.09399 4.92611C3.10403 5.17992 3.16937 5.42795 3.285 5.65125C3.40064 5.87455 3.56351 6.0672 3.76117 6.21447L2.54801 8Z"
          fill="#FF0202"
        />
         
        <path
          d="M17.452 8C17.9097 7.65902 18.2868 7.21294 18.5545 6.69588C18.8223 6.17884 18.9736 5.60452 18.9968 5.01683C19.0201 4.42915 18.9147 3.84369 18.6888 3.30522C18.4627 2.76675 18.1221 2.28952 17.693 1.91007C17.2639 1.5306 16.7574 1.25894 16.2127 1.11586C15.6679 0.972783 15.0991 0.962073 14.5497 1.08456C14.0003 1.20704 13.485 1.45946 13.0431 1.82253C12.6012 2.1856 12.2444 2.64969 12 3.1793L13.8843 4.13254C13.9898 3.9038 14.1439 3.70338 14.3348 3.54658C14.5256 3.38978 14.7482 3.28076 14.9854 3.22786C15.2227 3.17497 15.4683 3.1796 15.7036 3.24139C15.9389 3.30318 16.1576 3.4205 16.3429 3.58439C16.5282 3.74827 16.6754 3.95436 16.773 4.18692C16.8706 4.41947 16.9161 4.67231 16.906 4.92611C16.896 5.17992 16.8307 5.42795 16.715 5.65125C16.5994 5.87455 16.4366 6.0672 16.2389 6.21447L17.452 8Z"
          fill="#FF0202"
        />
      </svg>
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots Availability/Cell Flagged Selected 1`] = `
<div
  class="Cell-selectable Cell-selectable--selected"
>
  <svg
    class="Cell-icon clock-icon"
    fill="none"
    height="20"
    viewBox="0 0 20 20"
    width="20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M6.28555 15.0753C6.88184 15.2786 7.15969 15.8311 6.90615 16.3093L5.25321 19.427C4.99968 19.9053 4.31075 20.1281 3.71445 19.9247C3.11816 19.7214 2.84031 19.1689 3.09385 18.6906L4.74679 15.5729C5.00032 15.0947 5.68925 14.8719 6.28555 15.0753Z"
      fill="#FF0202"
      fill-rule="evenodd"
    />
     
    <path
      clip-rule="evenodd"
      d="M13.7145 15.0753C13.1181 15.2786 12.8403 15.8311 13.0938 16.3093L14.7468 19.427C15.0004 19.9053 15.6893 20.1281 16.2855 19.9247C16.8819 19.7214 17.1597 19.1689 16.9062 18.6906L15.2532 15.5729C14.9996 15.0947 14.3107 14.8719 13.7145 15.0753Z"
      fill="#FF0202"
      fill-rule="evenodd"
    />
     
    <path
      clip-rule="evenodd"
      d="M10.0378 6C10.611 6 11.0757 6.38684 11.0757 6.86403V9.27196H12.9622C13.5354 9.27196 14 9.65876 14 10.136C14 10.6132 13.5354 11 12.9622 11H10.0378C9.46465 11 9 10.6132 9 10.136V6.86403C9 6.38684 9.46465 6 10.0378 6Z"
      fill="#FF0202"
      fill-rule="evenodd"
    />
     
    <path
      clip-rule="evenodd"
      d="M9.99999 16.0117C13.2965 16.0117 15.9959 13.335 15.9959 10C15.9959 6.66498 13.2965 3.98831 9.99999 3.98831C6.70346 3.98831 4.00409 6.66498 4.00409 10C4.00409 13.335 6.70346 16.0117 9.99999 16.0117ZM9.99999 18C14.4183 18 18 14.4183 18 10C18 5.58173 14.4183 2 9.99999 2C5.58171 2 2 5.58173 2 10C2 14.4183 5.58171 18 9.99999 18Z"
      fill="#FF0202"
      fill-rule="evenodd"
    />
     
    <path
      d="M2.54801 8C2.09035 7.65902 1.71321 7.21294 1.44546 6.69588C1.1777 6.17884 1.02641 5.60452 1.00316 5.01683C0.979903 4.42915 1.08531 3.84369 1.3113 3.30522C1.53729 2.76675 1.87789 2.28952 2.30705 1.91007C2.73621 1.5306 3.24255 1.25894 3.78736 1.11586C4.33218 0.972783 4.90101 0.962073 5.45038 1.08456C5.99976 1.20704 6.5151 1.45946 6.957 1.82253C7.3989 2.1856 7.75567 2.64969 8 3.1793L6.11574 4.13254C6.01021 3.9038 5.85614 3.70338 5.66529 3.54658C5.47444 3.38978 5.25188 3.28076 5.01462 3.22786C4.77736 3.17497 4.5317 3.1796 4.29641 3.24139C4.06112 3.30318 3.84244 3.4205 3.6571 3.58439C3.47176 3.74827 3.32466 3.95436 3.22707 4.18692C3.12947 4.41947 3.08394 4.67231 3.09399 4.92611C3.10403 5.17992 3.16937 5.42795 3.285 5.65125C3.40064 5.87455 3.56351 6.0672 3.76117 6.21447L2.54801 8Z"
      fill="#FF0202"
    />
     
    <path
      d="M17.452 8C17.9097 7.65902 18.2868 7.21294 18.5545 6.69588C18.8223 6.17884 18.9736 5.60452 18.9968 5.01683C19.0201 4.42915 18.9147 3.84369 18.6888 3.30522C18.4627 2.76675 18.1221 2.28952 17.693 1.91007C17.2639 1.5306 16.7574 1.25894 16.2127 1.11586C15.6679 0.972783 15.0991 0.962073 14.5497 1.08456C14.0003 1.20704 13.485 1.45946 13.0431 1.82253C12.6012 2.1856 12.2444 2.64969 12 3.1793L13.8843 4.13254C13.9898 3.9038 14.1439 3.70338 14.3348 3.54658C14.5256 3.38978 14.7482 3.28076 14.9854 3.22786C15.2227 3.17497 15.4683 3.1796 15.7036 3.24139C15.9389 3.30318 16.1576 3.4205 16.3429 3.58439C16.5282 3.74827 16.6754 3.95436 16.773 4.18692C16.8706 4.41947 16.9161 4.67231 16.906 4.92611C16.896 5.17992 16.8307 5.42795 16.715 5.65125C16.5994 5.87455 16.4366 6.0672 16.2389 6.21447L17.452 8Z"
      fill="#FF0202"
    />
  </svg>
</div>
`;

exports[`Storyshots Availability/Cell Flagged Unselected 1`] = `
<div
  class="Cell-selectable"
>
  <svg
    class="Cell-icon clock-icon"
    fill="none"
    height="20"
    viewBox="0 0 20 20"
    width="20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M6.28555 15.0753C6.88184 15.2786 7.15969 15.8311 6.90615 16.3093L5.25321 19.427C4.99968 19.9053 4.31075 20.1281 3.71445 19.9247C3.11816 19.7214 2.84031 19.1689 3.09385 18.6906L4.74679 15.5729C5.00032 15.0947 5.68925 14.8719 6.28555 15.0753Z"
      fill="#FF0202"
      fill-rule="evenodd"
    />
     
    <path
      clip-rule="evenodd"
      d="M13.7145 15.0753C13.1181 15.2786 12.8403 15.8311 13.0938 16.3093L14.7468 19.427C15.0004 19.9053 15.6893 20.1281 16.2855 19.9247C16.8819 19.7214 17.1597 19.1689 16.9062 18.6906L15.2532 15.5729C14.9996 15.0947 14.3107 14.8719 13.7145 15.0753Z"
      fill="#FF0202"
      fill-rule="evenodd"
    />
     
    <path
      clip-rule="evenodd"
      d="M10.0378 6C10.611 6 11.0757 6.38684 11.0757 6.86403V9.27196H12.9622C13.5354 9.27196 14 9.65876 14 10.136C14 10.6132 13.5354 11 12.9622 11H10.0378C9.46465 11 9 10.6132 9 10.136V6.86403C9 6.38684 9.46465 6 10.0378 6Z"
      fill="#FF0202"
      fill-rule="evenodd"
    />
     
    <path
      clip-rule="evenodd"
      d="M9.99999 16.0117C13.2965 16.0117 15.9959 13.335 15.9959 10C15.9959 6.66498 13.2965 3.98831 9.99999 3.98831C6.70346 3.98831 4.00409 6.66498 4.00409 10C4.00409 13.335 6.70346 16.0117 9.99999 16.0117ZM9.99999 18C14.4183 18 18 14.4183 18 10C18 5.58173 14.4183 2 9.99999 2C5.58171 2 2 5.58173 2 10C2 14.4183 5.58171 18 9.99999 18Z"
      fill="#FF0202"
      fill-rule="evenodd"
    />
     
    <path
      d="M2.54801 8C2.09035 7.65902 1.71321 7.21294 1.44546 6.69588C1.1777 6.17884 1.02641 5.60452 1.00316 5.01683C0.979903 4.42915 1.08531 3.84369 1.3113 3.30522C1.53729 2.76675 1.87789 2.28952 2.30705 1.91007C2.73621 1.5306 3.24255 1.25894 3.78736 1.11586C4.33218 0.972783 4.90101 0.962073 5.45038 1.08456C5.99976 1.20704 6.5151 1.45946 6.957 1.82253C7.3989 2.1856 7.75567 2.64969 8 3.1793L6.11574 4.13254C6.01021 3.9038 5.85614 3.70338 5.66529 3.54658C5.47444 3.38978 5.25188 3.28076 5.01462 3.22786C4.77736 3.17497 4.5317 3.1796 4.29641 3.24139C4.06112 3.30318 3.84244 3.4205 3.6571 3.58439C3.47176 3.74827 3.32466 3.95436 3.22707 4.18692C3.12947 4.41947 3.08394 4.67231 3.09399 4.92611C3.10403 5.17992 3.16937 5.42795 3.285 5.65125C3.40064 5.87455 3.56351 6.0672 3.76117 6.21447L2.54801 8Z"
      fill="#FF0202"
    />
     
    <path
      d="M17.452 8C17.9097 7.65902 18.2868 7.21294 18.5545 6.69588C18.8223 6.17884 18.9736 5.60452 18.9968 5.01683C19.0201 4.42915 18.9147 3.84369 18.6888 3.30522C18.4627 2.76675 18.1221 2.28952 17.693 1.91007C17.2639 1.5306 16.7574 1.25894 16.2127 1.11586C15.6679 0.972783 15.0991 0.962073 14.5497 1.08456C14.0003 1.20704 13.485 1.45946 13.0431 1.82253C12.6012 2.1856 12.2444 2.64969 12 3.1793L13.8843 4.13254C13.9898 3.9038 14.1439 3.70338 14.3348 3.54658C14.5256 3.38978 14.7482 3.28076 14.9854 3.22786C15.2227 3.17497 15.4683 3.1796 15.7036 3.24139C15.9389 3.30318 16.1576 3.4205 16.3429 3.58439C16.5282 3.74827 16.6754 3.95436 16.773 4.18692C16.8706 4.41947 16.9161 4.67231 16.906 4.92611C16.896 5.17992 16.8307 5.42795 16.715 5.65125C16.5994 5.87455 16.4366 6.0672 16.2389 6.21447L17.452 8Z"
      fill="#FF0202"
    />
  </svg>
</div>
`;

exports[`Storyshots Availability/Cell Selectable Selected 1`] = `
<div
  class="Cell-selectable Cell-selectable--selected"
>
  <!---->
</div>
`;

exports[`Storyshots Availability/Cell Selectable Unselected 1`] = `
<div
  class="Cell-selectable"
>
  <!---->
</div>
`;

exports[`Storyshots Availability/Cell Unselectable 1`] = `
<div
  class="Cell-unselectable"
>
  
  Cell content

</div>
`;

exports[`Storyshots Availability/Cell Vanilla 1`] = `
<div
  class="Cell-selectable"
>
  <!---->
</div>
`;

exports[`Storyshots Components/Chip Basic 1`] = `
<div
  class="chip-item"
>
  
  Chip content

</div>
`;

exports[`Storyshots Components/Stepper All Steps Completed 1`] = `
<div
  class="stepper"
>
  <div
    class="step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle circle--complete"
      >
        <svg
          class="check-mark"
          fill="none"
          height="19"
          viewBox="0 0 24 19"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.75033 14.8165L2.89139 9.95758C2.63477 9.69777 2.28479 9.55154 1.91961 9.55154C1.55442 9.55154 1.20444 9.69777 0.947816 9.95758C0.406392 10.499 0.406392 11.3597 0.947816 11.9012L6.76466 17.718C7.30608 18.2594 8.18069 18.2594 8.72212 17.718L23.4378 3.01624C23.9792 2.47482 23.9792 1.61409 23.4378 1.07267C23.1811 0.812857 22.8312 0.666626 22.466 0.666626C22.1008 0.666626 21.7508 0.812857 21.4942 1.07267L7.75033 14.8165Z"
            fill="#16D2AA"
          />
        </svg>
      </div>
    </div>
     
    <div
      class="progress-bar progress-bar--complete"
    />
  </div>
  <div
    class="step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle circle--complete"
      >
        <svg
          class="check-mark"
          fill="none"
          height="19"
          viewBox="0 0 24 19"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.75033 14.8165L2.89139 9.95758C2.63477 9.69777 2.28479 9.55154 1.91961 9.55154C1.55442 9.55154 1.20444 9.69777 0.947816 9.95758C0.406392 10.499 0.406392 11.3597 0.947816 11.9012L6.76466 17.718C7.30608 18.2594 8.18069 18.2594 8.72212 17.718L23.4378 3.01624C23.9792 2.47482 23.9792 1.61409 23.4378 1.07267C23.1811 0.812857 22.8312 0.666626 22.466 0.666626C22.1008 0.666626 21.7508 0.812857 21.4942 1.07267L7.75033 14.8165Z"
            fill="#16D2AA"
          />
        </svg>
      </div>
    </div>
     
    <div
      class="progress-bar progress-bar--complete"
    />
  </div>
  <div
    class="step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle circle--complete"
      >
        <svg
          class="check-mark"
          fill="none"
          height="19"
          viewBox="0 0 24 19"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.75033 14.8165L2.89139 9.95758C2.63477 9.69777 2.28479 9.55154 1.91961 9.55154C1.55442 9.55154 1.20444 9.69777 0.947816 9.95758C0.406392 10.499 0.406392 11.3597 0.947816 11.9012L6.76466 17.718C7.30608 18.2594 8.18069 18.2594 8.72212 17.718L23.4378 3.01624C23.9792 2.47482 23.9792 1.61409 23.4378 1.07267C23.1811 0.812857 22.8312 0.666626 22.466 0.666626C22.1008 0.666626 21.7508 0.812857 21.4942 1.07267L7.75033 14.8165Z"
            fill="#16D2AA"
          />
        </svg>
      </div>
    </div>
     
    <div
      class="progress-bar progress-bar--complete"
    />
  </div>
  <div
    class="step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle circle--complete"
      >
        <svg
          class="check-mark"
          fill="none"
          height="19"
          viewBox="0 0 24 19"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.75033 14.8165L2.89139 9.95758C2.63477 9.69777 2.28479 9.55154 1.91961 9.55154C1.55442 9.55154 1.20444 9.69777 0.947816 9.95758C0.406392 10.499 0.406392 11.3597 0.947816 11.9012L6.76466 17.718C7.30608 18.2594 8.18069 18.2594 8.72212 17.718L23.4378 3.01624C23.9792 2.47482 23.9792 1.61409 23.4378 1.07267C23.1811 0.812857 22.8312 0.666626 22.466 0.666626C22.1008 0.666626 21.7508 0.812857 21.4942 1.07267L7.75033 14.8165Z"
            fill="#16D2AA"
          />
        </svg>
      </div>
    </div>
     
    <div
      class="progress-bar progress-bar--complete"
    />
  </div>
  <div
    class="step step--last-step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle circle--complete"
      >
        <svg
          class="check-mark"
          fill="none"
          height="19"
          viewBox="0 0 24 19"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.75033 14.8165L2.89139 9.95758C2.63477 9.69777 2.28479 9.55154 1.91961 9.55154C1.55442 9.55154 1.20444 9.69777 0.947816 9.95758C0.406392 10.499 0.406392 11.3597 0.947816 11.9012L6.76466 17.718C7.30608 18.2594 8.18069 18.2594 8.72212 17.718L23.4378 3.01624C23.9792 2.47482 23.9792 1.61409 23.4378 1.07267C23.1811 0.812857 22.8312 0.666626 22.466 0.666626C22.1008 0.666626 21.7508 0.812857 21.4942 1.07267L7.75033 14.8165Z"
            fill="#16D2AA"
          />
        </svg>
      </div>
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots Components/Stepper In Progress 1`] = `
<div
  class="stepper"
>
  <div
    class="step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle circle--complete"
      >
        <svg
          class="check-mark"
          fill="none"
          height="19"
          viewBox="0 0 24 19"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.75033 14.8165L2.89139 9.95758C2.63477 9.69777 2.28479 9.55154 1.91961 9.55154C1.55442 9.55154 1.20444 9.69777 0.947816 9.95758C0.406392 10.499 0.406392 11.3597 0.947816 11.9012L6.76466 17.718C7.30608 18.2594 8.18069 18.2594 8.72212 17.718L23.4378 3.01624C23.9792 2.47482 23.9792 1.61409 23.4378 1.07267C23.1811 0.812857 22.8312 0.666626 22.466 0.666626C22.1008 0.666626 21.7508 0.812857 21.4942 1.07267L7.75033 14.8165Z"
            fill="#16D2AA"
          />
        </svg>
      </div>
    </div>
     
    <div
      class="progress-bar progress-bar--complete"
    />
  </div>
  <div
    class="step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle circle--complete"
      >
        <svg
          class="check-mark"
          fill="none"
          height="19"
          viewBox="0 0 24 19"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.75033 14.8165L2.89139 9.95758C2.63477 9.69777 2.28479 9.55154 1.91961 9.55154C1.55442 9.55154 1.20444 9.69777 0.947816 9.95758C0.406392 10.499 0.406392 11.3597 0.947816 11.9012L6.76466 17.718C7.30608 18.2594 8.18069 18.2594 8.72212 17.718L23.4378 3.01624C23.9792 2.47482 23.9792 1.61409 23.4378 1.07267C23.1811 0.812857 22.8312 0.666626 22.466 0.666626C22.1008 0.666626 21.7508 0.812857 21.4942 1.07267L7.75033 14.8165Z"
            fill="#16D2AA"
          />
        </svg>
      </div>
    </div>
     
    <div
      class="progress-bar progress-bar--complete"
    />
  </div>
  <div
    class="step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle"
      >
        <span
          class="step-display"
        >
          3
        </span>
      </div>
    </div>
     
    <div
      class="progress-bar"
    />
  </div>
  <div
    class="step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle circle--not-started"
      >
        <span
          class="step-display step-display--not-started"
        >
          4
        </span>
      </div>
    </div>
     
    <div
      class="progress-bar"
    />
  </div>
  <div
    class="step step--last-step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle circle--not-started"
      >
        <span
          class="step-display step-display--not-started"
        >
          5
        </span>
      </div>
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots Components/Stepper No Steps Completed 1`] = `
<div
  class="stepper"
>
  <div
    class="step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle"
      >
        <span
          class="step-display"
        >
          1
        </span>
      </div>
    </div>
     
    <div
      class="progress-bar"
    />
  </div>
  <div
    class="step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle circle--not-started"
      >
        <span
          class="step-display step-display--not-started"
        >
          2
        </span>
      </div>
    </div>
     
    <div
      class="progress-bar"
    />
  </div>
  <div
    class="step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle circle--not-started"
      >
        <span
          class="step-display step-display--not-started"
        >
          3
        </span>
      </div>
    </div>
     
    <div
      class="progress-bar"
    />
  </div>
  <div
    class="step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle circle--not-started"
      >
        <span
          class="step-display step-display--not-started"
        >
          4
        </span>
      </div>
    </div>
     
    <div
      class="progress-bar"
    />
  </div>
  <div
    class="step step--last-step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle circle--not-started"
      >
        <span
          class="step-display step-display--not-started"
        >
          5
        </span>
      </div>
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots Components/Stepper Vanilla 1`] = `
<div
  class="stepper"
>
  <div
    class="step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle circle--not-started"
      >
        <span
          class="step-display step-display--not-started"
        >
          1
        </span>
      </div>
    </div>
     
    <div
      class="progress-bar"
    />
  </div>
  <div
    class="step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle circle--not-started"
      >
        <span
          class="step-display step-display--not-started"
        >
          2
        </span>
      </div>
    </div>
     
    <div
      class="progress-bar"
    />
  </div>
  <div
    class="step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle circle--not-started"
      >
        <span
          class="step-display step-display--not-started"
        >
          3
        </span>
      </div>
    </div>
     
    <div
      class="progress-bar"
    />
  </div>
  <div
    class="step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle circle--not-started"
      >
        <span
          class="step-display step-display--not-started"
        >
          4
        </span>
      </div>
    </div>
     
    <div
      class="progress-bar"
    />
  </div>
  <div
    class="step step--last-step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle circle--not-started"
      >
        <span
          class="step-display step-display--not-started"
        >
          5
        </span>
      </div>
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots Example/Button Large 1`] = `
<button
  class="storybook-button storybook-button--secondary storybook-button--large"
  type="button"
>
  
  Button

</button>
`;

exports[`Storyshots Example/Button Primary 1`] = `
<button
  class="storybook-button storybook-button--primary storybook-button--medium"
  type="button"
>
  
  Button

</button>
`;

exports[`Storyshots Example/Button Secondary 1`] = `
<button
  class="storybook-button storybook-button--secondary storybook-button--medium"
  type="button"
>
  
  Button

</button>
`;

exports[`Storyshots Example/Button Small 1`] = `
<button
  class="storybook-button storybook-button--secondary storybook-button--small"
  type="button"
>
  
  Button

</button>
`;

exports[`Storyshots Example/FavoritingToggle Vanilla 1`] = `
<div>
  <svg
    class="heart-icon-unfavorited"
    fill="none"
    height="19"
    viewBox="0 0 20 19"
    width="20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M14.6315 0.508611L14.6443 0.508525L14.6571 0.507779C15.3071 0.469988 15.958 0.57019 16.5663 0.801881C17.1699 1.03174 17.7183 1.38594 18.1763 1.84132C19.1017 2.89558 19.5741 4.27228 19.4905 5.67284L19.4896 5.68773V5.70264C19.4896 7.30114 18.6865 8.99933 17.0676 10.7897L10.1298 18.0355L10.1249 18.0406L10.1202 18.0458C10.1049 18.0626 10.0864 18.0759 10.0666 18.0847C10.0465 18.0935 10.025 18.098 10.0025 18.0979L9.99728 18.0979C9.97425 18.098 9.95195 18.0933 9.93245 18.0847C9.91263 18.0759 9.89407 18.0626 9.87885 18.0458L9.8741 18.0406L9.8692 18.0354L2.91021 10.7679L2.90183 10.7592L2.89304 10.7509C2.80558 10.668 2.72257 10.5812 2.64465 10.4907C2.57042 10.3856 2.46979 10.2536 2.35317 10.1007C2.25384 9.97038 2.14292 9.8249 2.02682 9.66782L2.02677 9.66776C1.76206 9.30975 1.52144 8.93466 1.30672 8.54486C1.07669 8.11269 0.892267 7.65774 0.756374 7.18736L0.756523 7.18731L0.752765 7.17543C0.597379 6.68388 0.515895 6.17175 0.510147 5.65561L0.510013 5.64363L0.509306 5.63167C0.427547 4.24884 0.886992 2.88896 1.79065 1.84006C2.24892 1.38623 2.79723 1.03314 3.40016 0.803507C4.00866 0.571759 4.65921 0.470977 5.30925 0.507821L5.32225 0.508557L5.33526 0.508617C5.75973 0.510554 6.18072 0.587336 6.57857 0.735357L6.57857 0.735366L6.58148 0.736428C7.01276 0.89385 7.42077 1.10809 7.7953 1.37372L7.79528 1.37374L7.79935 1.37657C8.15408 1.62291 8.49483 1.88892 8.81957 2.17331C9.09806 2.42064 9.36165 2.68427 9.60893 2.9628L9.98283 3.38395L10.3567 2.9628C10.6037 2.68465 10.8669 2.42137 11.1449 2.17433C11.4724 1.89093 11.8142 1.62411 12.1687 1.37492L12.1704 1.37372C12.5449 1.10809 12.9529 0.89385 13.3842 0.736432L13.3861 0.735727C13.7849 0.588338 14.2064 0.511457 14.6315 0.508611Z"
      stroke="black"
    />
  </svg>
   
  <!---->
   
  <!---->
</div>
`;

exports[`Storyshots Example/Header Logged In 1`] = `
<header>
  <div
    class="wrapper"
  >
    <div>
      <svg
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
            fill="#FFF"
          />
           
          <path
            d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
            fill="#555AB9"
          />
           
          <path
            d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
            fill="#91BAF8"
          />
        </g>
      </svg>
       
      <h1>
        Acme
      </h1>
    </div>
     
    <div>
      <button
        class="storybook-button storybook-button--secondary storybook-button--small"
        type="button"
      >
        
  Log out

      </button>
       
      <!---->
       
      <!---->
    </div>
  </div>
</header>
`;

exports[`Storyshots Example/Header Logged Out 1`] = `
<header>
  <div
    class="wrapper"
  >
    <div>
      <svg
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
            fill="#FFF"
          />
           
          <path
            d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
            fill="#555AB9"
          />
           
          <path
            d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
            fill="#91BAF8"
          />
        </g>
      </svg>
       
      <h1>
        Acme
      </h1>
    </div>
     
    <div>
      <!---->
       
      <button
        class="storybook-button storybook-button--secondary storybook-button--small"
        type="button"
      >
        
  Log in

      </button>
       
      <button
        class="storybook-button storybook-button--primary storybook-button--small"
        type="button"
      >
        
  Sign up

      </button>
    </div>
  </div>
</header>
`;

exports[`Storyshots Example/HyperlinkButton Dark 1`] = `
<button
  class="ButtonTemplate HyperlinkButton HyperlinkButton--dark"
  type="button"
>
  <span>
    Button
  </span>
   
  <!---->
</button>
`;

exports[`Storyshots Example/HyperlinkButton Primary 1`] = `
<button
  class="ButtonTemplate HyperlinkButton"
  type="button"
>
  <span>
    Button
  </span>
   
  <svg
    class="ButtonTemplate-icon arrow-icon"
    height="32"
    viewBox="0 0 32 32"
    width="32"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m31.716 16.686c.378-.379.378-.993 0-1.371l-6.171-6.171c-.379-.379-.993-.379-1.371 0s-.379.993 0 1.371l5.485 5.485-5.485 5.486c-.379.379-.379.993 0 1.371s.993.379 1.371 0zm-31.716.284h31.031v-1.939h-31.031z"
    />
  </svg>
</button>
`;

exports[`Storyshots Example/HyperlinkButton Reverse 1`] = `
<button
  class="ButtonTemplate HyperlinkButton HyperlinkButton--reverse"
  type="button"
>
  <span>
    Button
  </span>
   
  <!---->
</button>
`;

exports[`Storyshots Example/HyperlinkButton Route To 1`] = `<!---->`;

exports[`Storyshots Example/HyperlinkButton Vanilla 1`] = `
<button
  class="ButtonTemplate HyperlinkButton"
  type="button"
>
  <span>
    Button
  </span>
   
  <!---->
</button>
`;

exports[`Storyshots Example/LargeButton Primary 1`] = `
<button
  class="ButtonTemplate LargeButton-primary"
  type="button"
>
  <span>
    Button
  </span>
   
  <svg
    class="ButtonTemplate-icon arrow-icon"
    height="32"
    viewBox="0 0 32 32"
    width="32"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m31.716 16.686c.378-.379.378-.993 0-1.371l-6.171-6.171c-.379-.379-.993-.379-1.371 0s-.379.993 0 1.371l5.485 5.485-5.485 5.486c-.379.379-.379.993 0 1.371s.993.379 1.371 0zm-31.716.284h31.031v-1.939h-31.031z"
    />
  </svg>
</button>
`;

exports[`Storyshots Example/LargeButton Primary No Arrow 1`] = `
<button
  class="ButtonTemplate LargeButton-primary"
  type="button"
>
  <span>
    Button
  </span>
   
  <!---->
</button>
`;

exports[`Storyshots Example/LargeButton Primary With Route No Arrow 1`] = `
<button
  class="ButtonTemplate LargeButton-primary"
>
  <div>
    Button
  </div>
   
  <!---->
</button>
`;

exports[`Storyshots Example/LargeButton Reverse 1`] = `
<button
  class="ButtonTemplate LargeButton-secondary LargeButton-secondary--reverse"
  type="button"
>
  <span>
    Button
  </span>
   
  <!---->
</button>
`;

exports[`Storyshots Example/LargeButton Reverse With Route 1`] = `
<button
  class="ButtonTemplate LargeButton-secondary LargeButton-secondary--reverse"
>
  <div>
    Button
  </div>
   
  <!---->
</button>
`;

exports[`Storyshots Example/LargeButton Vanilla 1`] = `
<button
  class="ButtonTemplate LargeButton-secondary"
  type="button"
>
  <span>
    Button
  </span>
   
  <!---->
</button>
`;

exports[`Storyshots Example/LargeButton Vanilla With Route 1`] = `
<button
  class="ButtonTemplate LargeButton-secondary"
>
  <div>
    Button
  </div>
   
  <!---->
</button>
`;

exports[`Storyshots Example/LargeButton With Route 1`] = `
<button
  class="ButtonTemplate LargeButton-primary"
>
  <div>
    Button
  </div>
   
  <svg
    class="ButtonTemplate-icon arrow-icon"
    height="32"
    viewBox="0 0 32 32"
    width="32"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m31.716 16.686c.378-.379.378-.993 0-1.371l-6.171-6.171c-.379-.379-.993-.379-1.371 0s-.379.993 0 1.371l5.485 5.485-5.485 5.486c-.379.379-.379.993 0 1.371s.993.379 1.371 0zm-31.716.284h31.031v-1.939h-31.031z"
    />
  </svg>
</button>
`;

exports[`Storyshots Example/Page Logged In 1`] = `
<article>
  <header>
    <div
      class="wrapper"
    >
      <div>
        <svg
          height="32"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <path
              d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
              fill="#FFF"
            />
             
            <path
              d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
              fill="#555AB9"
            />
             
            <path
              d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
              fill="#91BAF8"
            />
          </g>
        </svg>
         
        <h1>
          Acme
        </h1>
      </div>
       
      <div>
        <button
          class="storybook-button storybook-button--secondary storybook-button--small"
          type="button"
        >
          
  Log out

        </button>
         
        <!---->
         
        <!---->
      </div>
    </div>
  </header>
   
  <section>
    <h2>
      Pages in Storybook
    </h2>
     
    <p>
      
      We recommend building UIs with a
      
      <a
        href="https://componentdriven.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        <strong>
          component-driven
        </strong>
      </a>
      
      process starting with atomic components and ending with pages.
    
    </p>
     
    <p>
      
      Render pages with mock data. This makes it easy to build and review page
      states without needing to navigate to them in your app. Here are some
      handy patterns for managing page data in Storybook:
    
    </p>
     
    <ul>
      <li>
        
        Use a higher-level connected component. Storybook helps you compose
        such data from the "args" of child component stories
      
      </li>
       
      <li>
        
        Assemble data in the page component from your services. You can mock
        these services out using Storybook.
      
      </li>
    </ul>
     
    <p>
      
      Get a guided tutorial on component-driven development at
      
      <a
        href="https://storybook.js.org/tutorials/"
        rel="noopener noreferrer"
        target="_blank"
      >
        Storybook tutorials
      </a>
      
      . Read more in the
      
      <a
        href="https://storybook.js.org/docs"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
      
      .
    
    </p>
     
    <div
      class="tip-wrapper"
    >
      <span
        class="tip"
      >
        Tip
      </span>
      
      Adjust the width of the canvas with the
      
      <svg
        height="10"
        viewBox="0 0 12 12"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M1.5 5.2h4.8c.3 0 .5.2.5.4v5.1c-.1.2-.3.3-.4.3H1.4a.5.5 0 01-.5-.4V5.7c0-.3.2-.5.5-.5zm0-2.1h6.9c.3 0 .5.2.5.4v7a.5.5 0 01-1 0V4H1.5a.5.5 0 010-1zm0-2.1h9c.3 0 .5.2.5.4v9.1a.5.5 0 01-1 0V2H1.5a.5.5 0 010-1zm4.3 5.2H2V10h3.8V6.2z"
            fill="#999"
            id="a"
          />
        </g>
      </svg>
      
      Viewports addon in the toolbar
    
    </div>
  </section>
</article>
`;

exports[`Storyshots Example/Page Logged Out 1`] = `
<article>
  <header>
    <div
      class="wrapper"
    >
      <div>
        <svg
          height="32"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <path
              d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
              fill="#FFF"
            />
             
            <path
              d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
              fill="#555AB9"
            />
             
            <path
              d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
              fill="#91BAF8"
            />
          </g>
        </svg>
         
        <h1>
          Acme
        </h1>
      </div>
       
      <div>
        <!---->
         
        <button
          class="storybook-button storybook-button--secondary storybook-button--small"
          type="button"
        >
          
  Log in

        </button>
         
        <button
          class="storybook-button storybook-button--primary storybook-button--small"
          type="button"
        >
          
  Sign up

        </button>
      </div>
    </div>
  </header>
   
  <section>
    <h2>
      Pages in Storybook
    </h2>
     
    <p>
      
      We recommend building UIs with a
      
      <a
        href="https://componentdriven.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        <strong>
          component-driven
        </strong>
      </a>
      
      process starting with atomic components and ending with pages.
    
    </p>
     
    <p>
      
      Render pages with mock data. This makes it easy to build and review page
      states without needing to navigate to them in your app. Here are some
      handy patterns for managing page data in Storybook:
    
    </p>
     
    <ul>
      <li>
        
        Use a higher-level connected component. Storybook helps you compose
        such data from the "args" of child component stories
      
      </li>
       
      <li>
        
        Assemble data in the page component from your services. You can mock
        these services out using Storybook.
      
      </li>
    </ul>
     
    <p>
      
      Get a guided tutorial on component-driven development at
      
      <a
        href="https://storybook.js.org/tutorials/"
        rel="noopener noreferrer"
        target="_blank"
      >
        Storybook tutorials
      </a>
      
      . Read more in the
      
      <a
        href="https://storybook.js.org/docs"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
      
      .
    
    </p>
     
    <div
      class="tip-wrapper"
    >
      <span
        class="tip"
      >
        Tip
      </span>
      
      Adjust the width of the canvas with the
      
      <svg
        height="10"
        viewBox="0 0 12 12"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M1.5 5.2h4.8c.3 0 .5.2.5.4v5.1c-.1.2-.3.3-.4.3H1.4a.5.5 0 01-.5-.4V5.7c0-.3.2-.5.5-.5zm0-2.1h6.9c.3 0 .5.2.5.4v7a.5.5 0 01-1 0V4H1.5a.5.5 0 010-1zm0-2.1h9c.3 0 .5.2.5.4v9.1a.5.5 0 01-1 0V2H1.5a.5.5 0 010-1zm4.3 5.2H2V10h3.8V6.2z"
            fill="#999"
            id="a"
          />
        </g>
      </svg>
      
      Viewports addon in the toolbar
    
    </div>
  </section>
</article>
`;

exports[`Storyshots Example/RecentSubjectCard Active Card 1`] = `
<button
  class="SubjectCard"
>
  <!---->
   
  <span
    class="SubectCard-title"
  >
    Calc 1
  </span>
   
  <svg
    class="arrow-icon"
    height="32"
    viewBox="0 0 32 32"
    width="32"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m31.716 16.686c.378-.379.378-.993 0-1.371l-6.171-6.171c-.379-.379-.993-.379-1.371 0s-.379.993 0 1.371l5.485 5.485-5.485 5.486c-.379.379-.379.993 0 1.371s.993.379 1.371 0zm-31.716.284h31.031v-1.939h-31.031z"
    />
  </svg>
</button>
`;

exports[`Storyshots Example/RecentSubjectCard Default Card 1`] = `
<button
  class="SubjectCard"
>
  <!---->
   
  <span
    class="SubectCard-title"
  >
    Algebra 1
  </span>
   
  <svg
    class="arrow-icon"
    height="32"
    viewBox="0 0 32 32"
    width="32"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m31.716 16.686c.378-.379.378-.993 0-1.371l-6.171-6.171c-.379-.379-.993-.379-1.371 0s-.379.993 0 1.371l5.485 5.485-5.485 5.486c-.379.379-.379.993 0 1.371s.993.379 1.371 0zm-31.716.284h31.031v-1.939h-31.031z"
    />
  </svg>
</button>
`;

exports[`Storyshots Example/RecentSubjectCard Disabled Card 1`] = `
<button
  class="SubjectCard"
  disabled="disabled"
>
  <!---->
   
  <span
    class="SubectCard-title"
  >
    Calc 2
  </span>
   
  <svg
    class="arrow-icon"
    height="32"
    viewBox="0 0 32 32"
    width="32"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m31.716 16.686c.378-.379.378-.993 0-1.371l-6.171-6.171c-.379-.379-.993-.379-1.371 0s-.379.993 0 1.371l5.485 5.485-5.485 5.486c-.379.379-.379.993 0 1.371s.993.379 1.371 0zm-31.716.284h31.031v-1.939h-31.031z"
    />
  </svg>
</button>
`;

exports[`Storyshots Example/RecentSubjectCard Hovered Card 1`] = `
<button
  class="SubjectCard"
>
  <!---->
   
  <span
    class="SubectCard-title"
  >
    Algebra 2
  </span>
   
  <svg
    class="arrow-icon"
    height="32"
    viewBox="0 0 32 32"
    width="32"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m31.716 16.686c.378-.379.378-.993 0-1.371l-6.171-6.171c-.379-.379-.993-.379-1.371 0s-.379.993 0 1.371l5.485 5.485-5.485 5.486c-.379.379-.379.993 0 1.371s.993.379 1.371 0zm-31.716.284h31.031v-1.939h-31.031z"
    />
  </svg>
</button>
`;
